2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_new_object_array): Build reference to element
	type, not array type.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* lower.cc (handle_convert): Keep non-converted copy of min/max
	for results.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::build_arguments): Declare.
	* tree.cc (binary_operator): Force evaluation order.
	(binary_operator): Likewise.  Special case division and mod.
	(visit_arith_binary): Use binary_operator.
	(visit_arith_binary): Likewise.
	(arith_shift): Force evaluation order.
	(visit_op_assignment): Use stabilize_reference; force evaluation
	order.
	(build_arguments): New method.
	(handle_invocation): Use it.
	(build_array_reference): Force evaluation order.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* lower.cc (handle_convert): Use convert_to_integer.
	* tree.cc (visit_cast): Handle float->integral conversions
	properly.

2005-10-10  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Remove visit_element() and add dummy
	implementations of new visitor methods.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_op_assignment): Use stabilize_reference.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_new_array): Correctly handle multi-dimensional
	case.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (handle_op_assignment): Special case RDIV_EXPR.  Use
	stabilize_reference, not save_expr.
	(visit_op_assignment): Use handle_op_assignment.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (handle_double): Swap words on little endian machines.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_this): Rewrote.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_long): Rewrote.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_op_assignment): Use handle_op_assignment.
	(handle_op_assignment): Handle 'mod' specially.

2005-10-09  Tom Tromey  <tromey@redhat.com>
